--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
+    "ngx-pagination": "^5.1.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
